# bgfx-python

./: .appveyor.yml  .cmakeformat  .flake8  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: build.yml  tests.yml
.travis/: after_success.sh  build_wheel_manylinux.sh  build_wheels_manylinux.sh  python_release.sh
bgfx/: __init__.py  constants.py  initializor.py  utils.py
examples/: example_window.py  utils.py
examples/assets/shaders/: mesh.FragmentShader.frag  mesh.VertexShader.vert  varying.def.sc
examples/cubes/: cubes.py
examples/helloworld/: helloworld.py  python_image.py
examples/mesh/: mesh.py
examples/shaders/: textures.FragmentShader.frag  textures.VertexShader.vert  varying.def.sc
examples/textures/: textures.py
examples/utils/: imgui_utils.py  matrix_utils.py
pybgfx/: __init__.py  constants.py  initializor.py
pybgfx/utils/: __init__.py  imgui_utils.py  mesh_utils.py  shaders_utils.py
pybgfx/utils/imgui/: __init__.py
scripts/: all_cmake_includes_bgfx.hpp  config.cfg  make_bindings.py  make_bindings_bgfx.py  make_imgui_bindings.py
src/: CMakeLists.txt  CMakeLists_copy.txt  all_cmake_includes_bgfx.hpp  all_cmake_includes_imgui.hpp  bgfx_module.cpp  bgfx_python.cpp  bgfx_utils_python.cpp  custom_types.h  imgui_extra_python.cpp  imgui_python.cpp  module.cpp  shaderc_module.cpp  shaderc_python.cpp
src/bgfx_python/: __init__.py
src/bgfx_python/tests/: test_bindings.py
src/cmake_modules/: ExportAllSymbolsWindows.cmake  FindCppyy.cmake  FindLibClang.cmake  FindWindowsSDK.cmake
src/extras/: bgfx_extra.cpp  bgfx_extra.h  imgui_extra.cpp  imgui_extra.h
src/include/: bgfx_extra_utils.h
src/pkg_templates/: MANIFEST.in.in  __init__.py.in  initializor.py  setup.py.in  test_bindings.py.in
src/scripts/: rename_runtime.bat
tests/: osmesa_context.py  test_examples.py
